fix what was broken in sunbeam. add styling to affinity tool, which I recently started using way more

--- a/nova/css/style.css
+++ b/nova/css/style.css
@@ -51,7 +51,8 @@ video#bgvid, video #bgvid {
 	height: 70em; 
 	z-index: -100;
 	background: url(assets/peoria.jpg) no-repeat;
-	background-size: cover; 
+	background-size: cover;
+	opacity: 0.6;
 }
 
 span.oembed.video {
